-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 9
-
Component/s: hotspot
-
b42
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8083241 | emb-9 | Ioi Lam | P1 | Resolved | Fixed | team |
| JDK-8067523 | 8u45 | Ioi Lam | P1 | Resolved | Fixed | b01 |
| JDK-8065841 | 8u40 | Ioi Lam | P1 | Closed | Fixed | b17 |
| JDK-8070724 | emb-8u47 | Ioi Lam | P1 | Resolved | Fixed | team |
This results in an assert:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/jprt/T/P1/005732.iklam/s/hotspot/src/share/vm/runtime/mutex.cpp:1367), pid=15057, tid=140678647793408
# assert((!thread->is_Java_thread() || ((JavaThread *)thread)->thread_state() == _thread_in_vm) || rank() == Mutex::special) failed: wrong thread state for using locks
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-201411190057.iklam.jdk9-b00)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-201411190057.iklam.jdk9-b00 compiled mode, sharing linux-amd64 compressed oops)
# Core dump written. Default location: /export/local/aurora/sandbox/results/workDir/closed/runtime/AppCDS/JvmtiAddPath/core or core.15057
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
# The crash happened outside the Java Virtual Machine in native code.
# See problematic frame for where to report the bug.
#
- backported by
-
JDK-8067523 WB_AddToBootstrapClassLoaderSearch calls JvmtiEnv::create_a_jvmti when not in _thread_in_vm state
-
- Resolved
-
-
JDK-8070724 WB_AddToBootstrapClassLoaderSearch calls JvmtiEnv::create_a_jvmti when not in _thread_in_vm state
-
- Resolved
-
-
JDK-8083241 WB_AddToBootstrapClassLoaderSearch calls JvmtiEnv::create_a_jvmti when not in _thread_in_vm state
-
- Resolved
-
-
JDK-8065841 WB_AddToBootstrapClassLoaderSearch calls JvmtiEnv::create_a_jvmti when not in _thread_in_vm state
-
- Closed
-
- relates to
-
JDK-8064701 Some CDS optimizations should be disabled if bootclasspath is modified by JVMTI
-
- Closed
-