8065346: WB_AddToBootstrapClassLoaderSearch calls JvmtiEnv::create_a_jvmti when not in _thread_in_vm state

Removed ThreadToNativeFromVM and use java_lang_String::as_utf8_string instead

Reviewed-by: dholmes, minqi